# functionalizer

./: .coveragerc  .dockerbuildenv  .gitignore  .gitlab-ci.hpc.yml  .gitlab-ci.nse.yml  .gitlab-ci.yml  .gitmodules  .gitreview  .pylintrc  .readthedocs.yaml  AUTHORS.rst  AUTHORS.txt  CHANGES.rst  Dockerfile  LICENSE.txt  MANIFEST.in  README.rst  default.nix  dev-requirements.txt  ispykfunc  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.ci/: generate_circuit_tests.sh  install_morphokit.sh  test_circuit1k_gj.sh  test_circuit1k_s2f.sh  test_circuit1k_s2f_split_and_merge.sh  test_circuit1k_s2s.sh  test_circuit1k_s2s_nodesets.sh  test_circuit2k_s2f.sh  test_circuit2k_s2s.sh
.github/workflows/: publish.yml  test.yml
.jenkins/: config.groovy  generate_circuit_tests.sh  test_circuit1k_s2f.sh  test_circuit1k_s2f_sonata.sh  test_circuit1k_s2f_split_and_merge.sh  test_circuit1k_s2s.sh  test_circuit1k_s2s_nodesets.sh  test_circuit2k_s2f.sh  test_circuit2k_s2s.sh  test_documentation.sh  test_pytest.sh
_validation/: pathway_cut_analysis2.ods  pathway_params_compare.ods  pathway_params_compare2.ods  reduced_counts_analysis.ods
doc/source/: api.rst  conf.py  index.rst  usage.rst
docs/: Makefile  api.rst  conf.py  debugging.rst  index.rst  recipe.rst  usage.rst
docs/source/: conf.py  filters.rst  usage.rst
envsetup/: .gitignore  env_setup.sh  env_setup_sage.sh  env_setup_viz.sh  sfrun.sh  spark_start_slaves.cmd  spykfunc-0.5_env.tgz  spykfunc.sbatch.inc.sh  start_master.sh  start_slave.sh
envsetup/spark_conf/: spark-env.sh  spark-env.sh.tpl
envsetup/spark_conf_sage/: spark-defaults.conf  spark-env.sh
envsetup/spark_conf_viz/: spark-env.sh
examples/: run.sbatch  simple_run.py  simple_run.sh  simple_run_cluster.py  simple_run_cluster.sh
java/: Makefile  Random.cpp  Random.h  spykfunc_udfs_hadoken_Random.h  test_udfs.py  test_udfs2.py  test_udfs3.py
java/random/: RandomUtilz.java  Ziggurat.java
java/spykfunc/udfs/: BinaryConcat.java  Float2Bin.scala  FloatArrayDeserializer.java  FloatArrayDeserializerLittleEndian.java  FloatArraySerializer.java  GammaRand.java  GaussRand.java  IntArraySerializer.java  PoissonRand.java  Rand.java
recipe/: __init__.py  property.py  recipe.py
recipe/parts/: bouton_density.py  gap_junction_properties.py  seeds.py  spine_lengths.py  structure.py  synapse_properties.py  synapse_reposition.py  touch_connections.py  touch_reduction.py  touch_rules.py
scripts/: download_spark_startup  sm_cluster
sparkmanager/: __init__.py  manager.py
spyk_tools/: nrn2efferent.py
spykfunc/: __init__.py  _filtering.py  circuit.py  commands.py  data_export.py  data_loader.py  definitions.py  filter_udfs.py  filters.py  filters_math.py  functionalizer.py  recipe.py  schema.py  skeleton.py  stats.py  synapse_properties.py
spykfunc/data/: default.properties
spykfunc/dataio/: __init__.py  _caching.py  common.cpp  common.pxd  common.pyx  cppneuron.cpp  cppneuron.pyx  makefile  morphologies.py  mvdtool  structbuf.cpp  structbuf.pxd  structbuf.pyx  touches.py
spykfunc/filters/: __init__.py  definitions.py  helpers.py  implementations.py
spykfunc/filters/implementations/: __init__.py  bouton_distance.py  gap_junction.py  reduce_and_cut.py  soma_distance.py  spine_length.py  synapse_id.py  synapse_properties.py  synapse_reposition.py  touch.py  touch_rules.py
spykfunc/filters/udfs/: CMakeLists.txt  __init__.py  _udfs.cpp  binning.cpp  binning.pyx  matching.cpp  matching.pyx  parameters.py
spykfunc/random/: __init__.py  threefry.cpp  threefry.pxd  threefry.pyx
spykfunc/tools/: compare_nodesets.py
spykfunc/utils/: __init__.py  _misc.py  checkpointing.py  conf.py  filesystem.py  nrn_summary.py  spark.py  spark_udef.py
src/functionalizer/: core.py  schema.py
src/functionalizer/filters/: __init__.py  definitions.py
src/recipe/: __init__.py  property.py  recipe.py
src/sparkmanager/: __init__.py  eventlog.py  manager.py
src/spykfunc/: __init__.py  circuit.py  cluster.py  commands.py  data_loader.py  definitions.py  functionalizer.py  schema.py  version.py
tests/: O1v5.py  conftest.py  fixtures.py  run_functionalizer.sh  test_2M.py  test_31k.py  test_bintouch.py  test_data_input_nodes.py  test_data_input_parquet.py  test_data_input_sonata.py  test_data_loader.py  test_filters.py  test_functionalizer.py  test_gap_junctions.py  test_hadoop_sensing.py  test_loader.py  test_memview.py  test_morpho.py  test_morpho_shift.py  test_morphologies.py  test_neuron_load_spark.py  test_pathways.py  test_property_generation.py  test_recipe.py  test_skeleton.py  test_spine_morphology.py  test_v5circuit.py  test_v6circuit.py  tst_neuron_memview.cpp  tst_neuron_memview.pyx  v5builderRecipeAllPathways.xml  v5builderRecipeAllPathways_no_repositioning.xml
tests/circuitBuilding_1000neurons/: BlueDetector_output  morphologies  recipe
tests/circuit_1000n/: builderConnectivityRecipeAllPathways.xml  builderRecipeAllPathways.xml  builderRecipeAllPathways_fixed.xml  circuit.mvd3  circuit_config_invalid.json  edges.h5  nodes.h5  syn_prop_out.parquet
tests/circuit_proj66_tiny/: nodes.h5  nodes_small.h5
tests/old/: test_morpho.py
tests/recipe/: test_bouton_distance.py  test_gap_junction_properties.py  test_property.py  test_recipe.py  test_seeds.py  test_touch_connections.py
tests/recipes/: synapse_properties.xml  synapse_properties_uhill_all.xml  synapse_properties_uhill_some.xml  v5.xml
tests/sample_runs/: O1v5.py  run_functionalizer.sh  test_2M.py  test_31k.py  test_functionalizer.py  test_v5circuit.py  test_v6circuit.py
tests/sparkmanager/: test_bench.py  test_cache.py  test_grouping.py  test_report.py
timing/: synapse_properties.py  touch_rules.py
tools/: __init__.py  coalesce.py  compare.py  compare_nodesets.py  deepsize.py  nrn2efferent.py  nrn2parquet.py  nrn_compare.py  nrn_summary.py  parquet_compare.py  scaling.py
tools/analysis/: gather.py  plot.py  scaling.py  timeline.py
tools/luigi/: tasks.py
tools/validation/: touches_dump.py  touches_plot.py
utils/: deepsize.py  nrn_compare.py
(+130 files in other folders)
