[metadata]
name = spykfunc
summary = A pySpark implementation of BBP Functionalizer
author = Fernando Pereira, Matthias Wolf
author-email = fernando.pereira@epfl.ch, matthias.wolf@epfl.ch
license = Blue Brain Project Licence
home-page = https://bbpteam.epfl.ch/project/spaces/display/BBPHPC/Spark+functionalizer
description-file = README.rst

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Framework :: Spark
    Topic :: Scientific/Engineering
    License :: Other/Proprietary License


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory
# and source location from the root of the repository:
# data_files =
#    share/spykfunc_docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[test]
# py.test options when running `python setup.py test`
addopts = tests --cov spykfunc --cov-report term-missing --verbose

[aliases]
docs = build_sphinx

[build_ext]
inplace = 1

[bdist_wheel]
# Use this option if your package is pure-python
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
